# Peacock

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  index.html  package-lock.json  package.json  ui-mockup-all.html  ui-mockup-fenco.html  ui-mockup-mobile.html  ui-mockup-warm.html  ui-mockup.html
.github/: FUNDING.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
apple/: project.yml
apple/Peacock/: Info.plist
apple/Peacock.xcodeproj/: project.pbxproj
apple/ShareExtension/: Info.plist  ShareExtension.entitlements  ShareViewController.swift
apple/Shared/: ShareInbox.swift
desktop/: index.html  package.json
desktop/src/: App.vue
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: android-impl-guide.md  appstore-description-en.md  appstore-description-zh.md  mobile-ui-spec.md  privacy-policy.md  release-notes-v0.1.0.md  swift-rewrite-guide.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  net_util.rs  state.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/discovery/: beacon.rs  commands.rs  device.rs  listener.rs  probe.rs
src-tauri/src/messaging/: client.rs  commands.rs  handler.rs  server.rs
src-tauri/src/protocol/: header.rs  types.rs  wire.rs
src-tauri/src/storage/: db.rs
src-tauri/src/transfer/: commands.rs  mod.rs  receiver.rs  sender.rs
src/composables/: useSwipeBack.ts
src/i18n/: en.ts  index.ts
src/stores/: chat.ts  device.ts  settings.ts  snippet.ts  transfer.ts
(+143 files in other folders)
